--- a/Code/Configurator/configurator.tabbar.swift.liquid
+++ b/Code/Configurator/configurator.tabbar.swift.liquid
@@ -13,7 +13,7 @@ final class {{ prefix }}{{ module_info.name }}ModuleConfigurator:  ViperModuleFa
     }
 
     private func configure(viewController: {{ prefix }}{{ module_info.name }}ViewController, with config: {{ prefix }}{{ module_info.name }}ModuleInputConfig?) {
-        
+
         guard viewController.output == nil else { // prevent double configuration
             return
         }
@@ -22,6 +22,7 @@ final class {{ prefix }}{{ module_info.name }}ModuleConfigurator:  ViperModuleFa
         let presenter = {{ prefix }}{{ module_info.name }}Presenter()
         presenter.view = viewController
         presenter.router = router
+        router.output = presenter
 
         let interactor = {{ prefix }}{{ module_info.name }}Interactor()
         interactor.output = presenter
@@ -36,7 +37,7 @@ final class {{ prefix }}{{ module_info.name }}ModuleConfigurator:  ViperModuleFa
             presenter.willDeinit()
         }
 
-        if let config = config { 
+        if let config = config {
             presenter.configure(with: config)
         }
 
